--- a/csharp-client/csharp-client.csproj
+++ b/csharp-client/csharp-client.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Obvs.Serialization.MessagePack-CSharp" Version="3.0.3.44" />
+  </ItemGroup>
+
 </Project>
